# hyperoptic-hass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  configuration.yaml  hacs.json  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: release-please.yaml  tests.yaml
custom_components/hyperoptic/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_integration.py  test_sensor.py
