[project]
name = "hyperoptic-hass"
version = "0.1.0"
description = "An unofficial Home Assistant integration that exposes your Hyperoptic broadband package data as sensors."
authors = [
    {name = "KRoperUK"}
]
readme = "README.md"
requires-python = ">=3.13.2,<4.0"
dependencies = [
    "hyperoptic>=0.0.0"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "homeassistant>=2025.0",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "flake8>=6.0",
    "pytest-homeassistant-custom-component (>=0.13.315,<0.14.0)"
]

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
